--- a/DDI.ipynb
+++ b/DDI.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "fef184ae-459b-48de-ad1d-559a09fe3243",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -46,6 +48,14 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e70f2726-5653-4a6b-bb62-690fd7dd399c",
+   "metadata": {},
+   "source": [
+    "## Initial Loading"
    ]
   },
   {
@@ -201,7 +211,6 @@
     }
    ],
    "source": [
-    "#initial loading\n",
     "\n",
     "ddi_fp = \"drugbank\\drugbank.tab\"\n",
     "ddi = pd.read_csv(ddi_fp, sep='\\t')\n",
@@ -215,12 +224,15 @@
     "ddi[\"Y\"] = ddi[\"Y\"].astype(\"category\")\n",
     "ddi[\"Map\"] = ddi[\"Map\"].astype(\"category\")\n",
     "\n",
+    "#counting interaction types for potential later weighting\n",
     "interaction_counts = pd.DataFrame(ddi['Y'].value_counts().rename_axis('value').reset_index(name='count')).sort_values(by='count', ascending=False)\n",
     "interaction_counts['row_num'] = interaction_counts.index + 1\n",
     "interaction_counts['log_count'] = np.log(interaction_counts['count'])\n",
     "\n",
+    "#listing longer explanations of interaction types for later use\n",
     "interaction_types = ddi[['Y','Map']].drop_duplicates(subset=['Y'])\n",
     "\n",
+    "#remove longer name of interaction type from main dataset\n",
     "ddi = ddi.drop(\"Map\",axis=1)\n",
     "\n",
     "ddi.head(10)"
@@ -254,12 +266,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#quick function to turn a list of size 1 lists of strings into a list of strings, for later use\n",
     "def delist(list_of_lists):\n",
     "    list_of_strings = []\n",
     "    for inner_list in list_of_lists:\n",
     "        string = inner_list[0]\n",
     "        list_of_strings.append(string)\n",
     "    return list_of_strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c4d13da-ee51-4e57-9add-fe3eba736f0e",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
    ]
   },
   {
@@ -271,8 +292,8 @@
    },
    "outputs": [],
    "source": [
-    "#preprocessing\n",
     "\n",
+    "# counting drugs by number of mentions in database\n",
     "old = pd.DataFrame()\n",
     "old[\"total\"] = ddi['ID1'].value_counts()\n",
     "old = old.reset_index()\n",
@@ -281,15 +302,17 @@
     "new[\"total\"] = ddi['ID2'].value_counts()\n",
     "new = new.reset_index()\n",
     "new.columns = ['ID', 'count'] \n",
-    "\n",
     "drug_counts = pd.merge(old,new,how='outer',on='ID').fillna(0)\n",
     "drug_counts['total'] = drug_counts['count_x'] + drug_counts['count_y']\n",
     "\n",
     "drug_counts = drug_counts.sort_values(by='total')\n",
     "drug_counts_one = pd.DataFrame(drug_counts[drug_counts['total']==1]['ID'])\n",
     "\n",
+    "#removing drugs only in database once\n",
     "ddi_proc = ddi[ ~ddi['ID1'].isin(drug_counts_one['ID'])]\n",
     "ddi_proc = ddi_proc[ ~ddi_proc['ID2'].isin(drug_counts_one['ID'])]\n",
+    "\n",
+    "#removing one particular drug with a problematic SMILES code\n",
     "ddi_proc = ddi_proc[ddi_proc['X1']!=\"OC1=CC=CC(=C1)C-1=C2\\CCC(=N2)\\C(=C2/N\\C(\\C=C2)=C(/C2=N/C(/C=C2)=C(\\C2=CC=C\\-1N2)C1=CC(O)=CC=C1)C1=CC(O)=CC=C1)\\C1=CC(O)=CC=C1\"]\n"
    ]
   },
@@ -320,6 +343,14 @@
     "count = X_two.count(search_string)\n",
     "if count > 0:\n",
     "    print(f\"'{search_string}' found {count} times in X_two.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a60708c8-9072-4897-837a-1a2fa0c48293",
+   "metadata": {},
+   "source": [
+    "## Featurization and Dimensionality Reduction"
    ]
   },
   {
@@ -2390,7 +2421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Basic dimensionality reduction down to 20 components from 4097\n",
+    "#Basic dimensionality reduction down to 20 components from 4096\n",
     "\n",
     "df_X = df_example.iloc[:,5:]\n",
     "df_Y = to_categorical(df_example[\"y\"])\n",
@@ -2420,8 +2451,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b720449-fa37-4ad6-a3a6-44b482fbb4f7",
+   "metadata": {},
+   "source": [
+    "## Initial basic model implementation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "efb34d72-33a8-4fc5-8bbf-8d7053425e8a",
    "metadata": {},
    "outputs": [
@@ -2430,46 +2469,46 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 14ms/step - accuracy: 0.0511 - loss: 0.5405 - val_accuracy: 0.3000 - val_loss: 0.0517\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 14ms/step - accuracy: 0.1803 - loss: 0.4656 - val_accuracy: 0.3000 - val_loss: 0.0574\n",
       "Epoch 2/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3590 - loss: 0.0515 - val_accuracy: 0.3000 - val_loss: 0.0441\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.2965 - loss: 0.0503 - val_accuracy: 0.3000 - val_loss: 0.0441\n",
       "Epoch 3/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3406 - loss: 0.0439 - val_accuracy: 0.3000 - val_loss: 0.0424\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3525 - loss: 0.0440 - val_accuracy: 0.3250 - val_loss: 0.0432\n",
       "Epoch 4/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3413 - loss: 0.0451 - val_accuracy: 0.3500 - val_loss: 0.0406\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3449 - loss: 0.0416 - val_accuracy: 0.3000 - val_loss: 0.0415\n",
       "Epoch 5/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3817 - loss: 0.0421 - val_accuracy: 0.4250 - val_loss: 0.0400\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3412 - loss: 0.0416 - val_accuracy: 0.3875 - val_loss: 0.0409\n",
       "Epoch 6/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3700 - loss: 0.0397 - val_accuracy: 0.3875 - val_loss: 0.0386\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.4017 - loss: 0.0383 - val_accuracy: 0.3375 - val_loss: 0.0394\n",
       "Epoch 7/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3810 - loss: 0.0394 - val_accuracy: 0.3875 - val_loss: 0.0379\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3658 - loss: 0.0384 - val_accuracy: 0.4375 - val_loss: 0.0381\n",
       "Epoch 8/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4208 - loss: 0.0389 - val_accuracy: 0.4750 - val_loss: 0.0365\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3740 - loss: 0.0380 - val_accuracy: 0.4750 - val_loss: 0.0356\n",
       "Epoch 9/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3994 - loss: 0.0366 - val_accuracy: 0.4375 - val_loss: 0.0359\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.4132 - loss: 0.0355 - val_accuracy: 0.5125 - val_loss: 0.0351\n",
       "Epoch 10/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4380 - loss: 0.0357 - val_accuracy: 0.4500 - val_loss: 0.0344\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3962 - loss: 0.0359 - val_accuracy: 0.5375 - val_loss: 0.0335\n",
       "Epoch 11/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4041 - loss: 0.0356 - val_accuracy: 0.4625 - val_loss: 0.0339\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5153 - loss: 0.0323 - val_accuracy: 0.5625 - val_loss: 0.0323\n",
       "Epoch 12/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4566 - loss: 0.0356 - val_accuracy: 0.4500 - val_loss: 0.0330\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.4435 - loss: 0.0322 - val_accuracy: 0.4375 - val_loss: 0.0330\n",
       "Epoch 13/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4839 - loss: 0.0324 - val_accuracy: 0.5250 - val_loss: 0.0325\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.4652 - loss: 0.0304 - val_accuracy: 0.6000 - val_loss: 0.0296\n",
       "Epoch 14/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4793 - loss: 0.0323 - val_accuracy: 0.5375 - val_loss: 0.0309\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.5236 - loss: 0.0290 - val_accuracy: 0.5625 - val_loss: 0.0300\n",
       "Epoch 15/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4942 - loss: 0.0316 - val_accuracy: 0.5250 - val_loss: 0.0305\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5398 - loss: 0.0283 - val_accuracy: 0.5625 - val_loss: 0.0297\n",
       "Epoch 16/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4986 - loss: 0.0305 - val_accuracy: 0.5000 - val_loss: 0.0298\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5341 - loss: 0.0278 - val_accuracy: 0.6250 - val_loss: 0.0275\n",
       "Epoch 17/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5007 - loss: 0.0299 - val_accuracy: 0.5250 - val_loss: 0.0291\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5599 - loss: 0.0262 - val_accuracy: 0.5750 - val_loss: 0.0276\n",
       "Epoch 18/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.5224 - loss: 0.0289 - val_accuracy: 0.5000 - val_loss: 0.0287\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5773 - loss: 0.0263 - val_accuracy: 0.5750 - val_loss: 0.0267\n",
       "Epoch 19/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5215 - loss: 0.0283 - val_accuracy: 0.6500 - val_loss: 0.0290\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5376 - loss: 0.0272 - val_accuracy: 0.6125 - val_loss: 0.0250\n",
       "Epoch 20/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5419 - loss: 0.0275 - val_accuracy: 0.6000 - val_loss: 0.0278\n",
-      "Test Accuracy: 0.574999988079071\n"
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5857 - loss: 0.0243 - val_accuracy: 0.6000 - val_loss: 0.0252\n",
+      "Test Accuracy: 0.5550000071525574\n"
      ]
     }
    ],
@@ -2481,6 +2520,8 @@
     "    keras.layers.Dropout(0.2),\n",
     "    Dense(40, activation='relu'),\n",
     "    Dense(80, activation='relu'),\n",
+    "    Dense(160, activation='relu'),\n",
+    "    Dense(320, activation='relu'),\n",
     "    Dense(160, activation='relu'),\n",
     "    Dense(86, activation='softmax')\n",
     "])\n",
