--- a/DDI.ipynb
+++ b/DDI.ipynb
@@ -2460,55 +2460,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "efb34d72-33a8-4fc5-8bbf-8d7053425e8a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 14ms/step - accuracy: 0.1803 - loss: 0.4656 - val_accuracy: 0.3000 - val_loss: 0.0574\n",
-      "Epoch 2/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.2965 - loss: 0.0503 - val_accuracy: 0.3000 - val_loss: 0.0441\n",
-      "Epoch 3/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3525 - loss: 0.0440 - val_accuracy: 0.3250 - val_loss: 0.0432\n",
-      "Epoch 4/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3449 - loss: 0.0416 - val_accuracy: 0.3000 - val_loss: 0.0415\n",
-      "Epoch 5/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3412 - loss: 0.0416 - val_accuracy: 0.3875 - val_loss: 0.0409\n",
-      "Epoch 6/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.4017 - loss: 0.0383 - val_accuracy: 0.3375 - val_loss: 0.0394\n",
-      "Epoch 7/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3658 - loss: 0.0384 - val_accuracy: 0.4375 - val_loss: 0.0381\n",
-      "Epoch 8/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3740 - loss: 0.0380 - val_accuracy: 0.4750 - val_loss: 0.0356\n",
-      "Epoch 9/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.4132 - loss: 0.0355 - val_accuracy: 0.5125 - val_loss: 0.0351\n",
-      "Epoch 10/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.3962 - loss: 0.0359 - val_accuracy: 0.5375 - val_loss: 0.0335\n",
-      "Epoch 11/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5153 - loss: 0.0323 - val_accuracy: 0.5625 - val_loss: 0.0323\n",
-      "Epoch 12/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.4435 - loss: 0.0322 - val_accuracy: 0.4375 - val_loss: 0.0330\n",
-      "Epoch 13/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.4652 - loss: 0.0304 - val_accuracy: 0.6000 - val_loss: 0.0296\n",
-      "Epoch 14/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.5236 - loss: 0.0290 - val_accuracy: 0.5625 - val_loss: 0.0300\n",
-      "Epoch 15/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5398 - loss: 0.0283 - val_accuracy: 0.5625 - val_loss: 0.0297\n",
-      "Epoch 16/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5341 - loss: 0.0278 - val_accuracy: 0.6250 - val_loss: 0.0275\n",
-      "Epoch 17/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.5599 - loss: 0.0262 - val_accuracy: 0.5750 - val_loss: 0.0276\n",
-      "Epoch 18/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5773 - loss: 0.0263 - val_accuracy: 0.5750 - val_loss: 0.0267\n",
-      "Epoch 19/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5376 - loss: 0.0272 - val_accuracy: 0.6125 - val_loss: 0.0250\n",
-      "Epoch 20/20\n",
-      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.5857 - loss: 0.0243 - val_accuracy: 0.6000 - val_loss: 0.0252\n",
-      "Test Accuracy: 0.5550000071525574\n"
+      "Epoch 1/5\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - accuracy: 0.0681 - loss: 0.4842 - val_accuracy: 0.2125 - val_loss: 0.0550\n",
+      "Epoch 2/5\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.2366 - loss: 0.0515 - val_accuracy: 0.3000 - val_loss: 0.0443\n",
+      "Epoch 3/5\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3642 - loss: 0.0428 - val_accuracy: 0.3000 - val_loss: 0.0421\n",
+      "Epoch 4/5\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.3611 - loss: 0.0420 - val_accuracy: 0.3000 - val_loss: 0.0418\n",
+      "Epoch 5/5\n",
+      "\u001b[1m36/36\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.2968 - loss: 0.0427 - val_accuracy: 0.3250 - val_loss: 0.0387\n",
+      "Test Accuracy: 0.3799999952316284\n"
      ]
     }
    ],
@@ -2530,7 +2502,7 @@
     "              loss='binary_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(X_train, y_train, epochs=20, batch_size=20, validation_split=0.1)\n",
+    "model.fit(X_train, y_train, epochs=5, batch_size=20, validation_split=0.1)\n",
     "\n",
     "loss, accuracy = model.evaluate(X_test, y_test, verbose=0)\n",
     "print(f\"Test Accuracy: {accuracy}\")"
