update gnn files

--- a/Model Implementation/MolGraphGNN.ipynb
+++ b/Model Implementation/MolGraphGNN.ipynb
@@ -225,7 +225,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17854/3903372731.py:10: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_35032/3903372731.py:10: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  ddi_filt = ddi_filt.groupby('Y', group_keys=False).apply(lambda x: x.sample(min(len(x), n), replace=False)).reset_index(drop=True)\n"
      ]
     }
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Data(x=[19, 4], edge_index=[2, 40]), Data(x=[26, 4], edge_index=[2, 56]), 0)\n"
+      "(Data(x=[28, 4], edge_index=[2, 62]), Data(x=[39, 4], edge_index=[2, 72]), 0)\n"
      ]
     }
    ],
@@ -348,8 +348,8 @@
     {
      "data": {
       "text/plain": [
-       "(Data(x=[19, 4], edge_index=[2, 40]),\n",
-       " Data(x=[26, 4], edge_index=[2, 56]),\n",
+       "(Data(x=[28, 4], edge_index=[2, 62]),\n",
+       " Data(x=[39, 4], edge_index=[2, 72]),\n",
        " tensor(0))"
       ]
      },
@@ -371,6 +371,7 @@
    "source": [
     "from torch_geometric.data import Batch\n",
     "\n",
+    "# create custom collate function to account for two graphs\n",
     "def collate_fn(batch):\n",
     "    X1_batch, X2_batch, labels = zip(*batch)\n",
     "    \n",
@@ -383,39 +384,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e3326c31-d1c5-4bf7-bc33-5764c7d0ceb9",
-   "metadata": {},
-   "source": [
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "loader = DataLoader(dataset, batch_size=32, shuffle=True, collate_fn=collate_fn)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4967e59-b84e-4fa8-ac0b-f7b99e8763cf",
-   "metadata": {},
-   "source": [
-    "for graph_X1_batch, graph_X2_batch, labels in loader:\n",
-    "    # Forward pass through the GNN\n",
-    "    z1 = gnn(graph_X1_batch)\n",
-    "    z2 = gnn(graph_X2_batch)\n",
-    "    \n",
-    "    # Combine embeddings\n",
-    "    z_combined = torch.cat([z1, z2, torch.abs(z1 - z2), z1 * z2], dim=1)\n",
-    "    \n",
-    "    # Forward pass through the classifier\n",
-    "    output = classifier(z_combined)\n",
-    "    \n",
-    "    # Calculate loss and backpropagate\n",
-    "    loss = criterion(output, labels)\n",
-    "    optimizer.zero_grad()\n",
-    "    loss.backward()\n",
-    "    optimizer.step()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "362b4152-8917-4233-8fe2-f231cf51331c",
@@ -424,6 +392,7 @@
    "source": [
     "from torch_geometric.nn import global_mean_pool\n",
     "\n",
+    "# neural network class\n",
     "class GNN(torch.nn.Module):\n",
     "    def __init__(self, in_channels, hidden_dim, out_dim):\n",
     "        super().__init__()\n",
@@ -447,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "1c9e1e99-b5f6-490b-83de-0da19b437f78",
    "metadata": {},
    "outputs": [],
@@ -465,18 +434,17 @@
     "random_state = 42\n",
     ")\n",
     "\n",
+    "# train test datasets\n",
     "train_dataset = Subset(dataset, train_indices)\n",
     "test_dataset = Subset(dataset, test_indices)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size = 32, shuffle = True, collate_fn = collate_fn)\n",
-    "test_loader = DataLoader(test_dataset, batch_size = 32, shuffle = False, collate_fn = collate_fn)\n",
-    "\n",
-    "#loader = DataLoader(dataset, batch_size=32, shuffle=True, collate_fn=collate_fn)"
+    "train_loader = DataLoader(train_dataset, batch_size = 100, shuffle = True, collate_fn = collate_fn)\n",
+    "test_loader = DataLoader(test_dataset, batch_size = 100, shuffle = False, collate_fn = collate_fn)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "647db7e0-0fb8-4cff-8f51-72d5ef0eb8e0",
    "metadata": {},
    "outputs": [],
@@ -484,14 +452,14 @@
     "import torch.optim as optim\n",
     "\n",
     "gnn = GNN(in_channels = 4, hidden_dim = 8, out_dim = 5)\n",
-    "classifier = nn.Linear(20, 5)  # Adjust the input size based on your GNN output\n",
+    "classifier = nn.Linear(20, 5)  \n",
     "optimizer = optim.Adam(list(gnn.parameters()) + list(classifier.parameters()), lr=0.001)\n",
     "criterion = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "08d1ed9f-5b42-4fdd-a327-e424cd8e5e05",
    "metadata": {},
    "outputs": [
@@ -499,33 +467,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 1.562505841255188\n",
-      "Epoch 2, Loss: 1.580553650856018\n",
-      "Epoch 3, Loss: 1.5074833631515503\n",
-      "Epoch 4, Loss: 1.5265101194381714\n",
-      "Epoch 5, Loss: 1.5521981716156006\n",
-      "Epoch 6, Loss: 1.5246347188949585\n",
-      "Epoch 7, Loss: 1.7109894752502441\n",
-      "Epoch 8, Loss: 1.512468695640564\n",
-      "Epoch 9, Loss: 1.4684982299804688\n",
-      "Epoch 10, Loss: 1.5067403316497803\n",
-      "Epoch 11, Loss: 1.5810078382492065\n",
-      "Epoch 12, Loss: 1.4927995204925537\n",
-      "Epoch 13, Loss: 1.4266656637191772\n",
-      "Epoch 14, Loss: 1.3921960592269897\n",
-      "Epoch 15, Loss: 1.427808165550232\n",
-      "Epoch 16, Loss: 1.613053798675537\n",
+      "Epoch 1, Loss: 1.5427863597869873\n",
+      "Epoch 2, Loss: 1.556637167930603\n",
+      "Epoch 3, Loss: 1.5317569971084595\n",
+      "Epoch 4, Loss: 1.5459914207458496\n",
+      "Epoch 5, Loss: 1.5937273502349854\n",
+      "Epoch 6, Loss: 1.4837058782577515\n",
+      "Epoch 7, Loss: 1.52476966381073\n",
+      "Epoch 8, Loss: 1.6016038656234741\n",
+      "Epoch 9, Loss: 1.5366675853729248\n",
+      "Epoch 10, Loss: 1.4934823513031006\n",
+      "Epoch 11, Loss: 1.5106797218322754\n",
+      "Epoch 12, Loss: 1.5640891790390015\n",
+      "Epoch 13, Loss: 1.5035762786865234\n",
+      "Epoch 14, Loss: 1.5499329566955566\n",
+      "Epoch 15, Loss: 1.5404667854309082\n",
+      "Epoch 16, Loss: 1.5470746755599976\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.33      0.13      0.18      8000\n",
-      "           1       0.30      0.47      0.37      8000\n",
-      "           2       0.34      0.27      0.30      8000\n",
-      "           3       0.41      0.41      0.41      7576\n",
-      "           4       0.36      0.47      0.41      6717\n",
+      "           0       0.23      0.12      0.16      8000\n",
+      "           1       0.28      0.50      0.36      8000\n",
+      "           2       0.30      0.23      0.26      8000\n",
+      "           3       0.36      0.34      0.35      7576\n",
+      "           4       0.35      0.36      0.35      6717\n",
       "\n",
-      "    accuracy                           0.35     38293\n",
-      "   macro avg       0.35      0.35      0.33     38293\n",
-      "weighted avg       0.35      0.35      0.33     38293\n",
+      "    accuracy                           0.31     38293\n",
+      "   macro avg       0.30      0.31      0.30     38293\n",
+      "weighted avg       0.30      0.31      0.29     38293\n",
       "\n"
      ]
     }
@@ -547,10 +515,10 @@
     "        z1 = gnn(graph_X1_batch)\n",
     "        z2 = gnn(graph_X2_batch)\n",
     "\n",
-    "        # combine the graph embeddings\n",
+    "        # combine graph embeddings\n",
     "        z_combined = torch.cat([z1, z2, torch.abs(z1 - z2), z1 * z2], dim=1)\n",
     "\n",
-    "        # forward pass through the classifier\n",
+    "        # forward pass through classifier\n",
     "        output = classifier(z_combined)\n",
     "\n",
     "        # calculate loss and backpropagate\n",
@@ -571,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "dc925c38-dbcf-4689-8123-11022c7fe72e",
    "metadata": {},
    "outputs": [
@@ -579,33 +547,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 1.8476295471191406\n",
-      "Epoch 2, Loss: 1.8380569219589233\n",
-      "Epoch 3, Loss: 1.8323599100112915\n",
-      "Epoch 4, Loss: 1.8289803266525269\n",
-      "Epoch 5, Loss: 1.8243392705917358\n",
-      "Epoch 6, Loss: 1.820809006690979\n",
-      "Epoch 7, Loss: 1.8155337572097778\n",
-      "Epoch 8, Loss: 1.8137401342391968\n",
-      "Epoch 9, Loss: 1.812421441078186\n",
-      "Epoch 10, Loss: 1.810024380683899\n",
-      "Epoch 11, Loss: 1.808811068534851\n",
-      "Epoch 12, Loss: 1.8067926168441772\n",
-      "Epoch 13, Loss: 1.8044925928115845\n",
-      "Epoch 14, Loss: 1.8039122819900513\n",
-      "Epoch 15, Loss: 1.8017951250076294\n",
-      "Epoch 16, Loss: 1.800451397895813\n",
+      "Epoch 1, Loss: 1.548784852027893\n",
+      "Epoch 2, Loss: 1.5482394695281982\n",
+      "Epoch 3, Loss: 1.5475457906723022\n",
+      "Epoch 4, Loss: 1.547003149986267\n",
+      "Epoch 5, Loss: 1.546531081199646\n",
+      "Epoch 6, Loss: 1.5461020469665527\n",
+      "Epoch 7, Loss: 1.5457926988601685\n",
+      "Epoch 8, Loss: 1.5451489686965942\n",
+      "Epoch 9, Loss: 1.5447543859481812\n",
+      "Epoch 10, Loss: 1.543831467628479\n",
+      "Epoch 11, Loss: 1.5438854694366455\n",
+      "Epoch 12, Loss: 1.5437707901000977\n",
+      "Epoch 13, Loss: 1.5437623262405396\n",
+      "Epoch 14, Loss: 1.5434229373931885\n",
+      "Epoch 15, Loss: 1.5431861877441406\n",
+      "Epoch 16, Loss: 1.543003797531128\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.30      0.14      0.19      2000\n",
-      "           1       0.31      0.47      0.38      2000\n",
-      "           2       0.33      0.27      0.30      2000\n",
-      "           3       0.43      0.44      0.44      1894\n",
-      "           4       0.38      0.48      0.42      1680\n",
+      "           0       0.26      0.13      0.17      2000\n",
+      "           1       0.29      0.45      0.36      2000\n",
+      "           2       0.32      0.27      0.29      2000\n",
+      "           3       0.40      0.37      0.38      1894\n",
+      "           4       0.38      0.45      0.41      1680\n",
       "\n",
-      "    accuracy                           0.35      9574\n",
-      "   macro avg       0.35      0.36      0.34      9574\n",
-      "weighted avg       0.35      0.35      0.34      9574\n",
+      "    accuracy                           0.33      9574\n",
+      "   macro avg       0.33      0.34      0.32      9574\n",
+      "weighted avg       0.33      0.33      0.32      9574\n",
       "\n"
      ]
     }
@@ -623,7 +591,7 @@
     "    predicted_labels = []\n",
     "    \n",
     "    for graph_X1_batch, graph_X2_batch, labels in test_loader:\n",
-    "        # Forward pass through the GNN\n",
+    "        # Forward pass \n",
     "        z1 = gnn(graph_X1_batch)\n",
     "        z2 = gnn(graph_X2_batch)\n",
     "\n",
@@ -653,6 +621,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a5ec7192-406a-4e4d-89f1-d59aee473693",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129873ad-9f2e-460e-ac80-7d8deed3c92f",
    "metadata": {},
    "outputs": [],
    "source": []
