--- a/Model Implementation/MolGraphGNN.ipynb
+++ b/Model Implementation/MolGraphGNN.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d4566079",
+   "metadata": {},
+   "source": [
+    "Molecular Graph GNN"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c9703389-09f3-495f-b94a-01d6e0937860",
    "metadata": {},
    "outputs": [],
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f3c5cdc4-52b6-44f1-a066-6cea9199535a",
    "metadata": {},
    "outputs": [
@@ -238,11 +246,10 @@
     "print(\"Label Mapping:\", label_mapping)\n",
     "ddi_filt['Y'] = ddi_filt['Y'].map(label_mapping)\n",
     "\n",
-    "n = 10000  # Number of samples per label\n",
-    "#ddi_filt = ddi_filt.groupby('Y', group_keys=False).apply(lambda x: x.sample(n, replace=True)).reset_index(drop=True)\n",
+    "n = 10000  # number of samples per label in train\n",
     "ddi_filt = ddi_filt.groupby('Y', group_keys=False).apply(lambda x: x.sample(min(len(x), n), replace=False)).reset_index(drop=True)\n",
     "\n",
-    "print(ddi_filt['Y'].value_counts())  # Check how many samples per label\n"
+    "print(ddi_filt['Y'].value_counts())  \n"
    ]
   },
   {
@@ -299,24 +306,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4c374321-3edd-47b3-9603-a63359a58ac6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Data(x=[28, 4], edge_index=[2, 62]), Data(x=[39, 4], edge_index=[2, 72]), 0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(graph_data[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "76210223-a6d1-42f4-bb36-8130617562af",
    "metadata": {},
@@ -337,29 +326,6 @@
     "        return graph_X1, graph_X2, torch.tensor(label, dtype = torch.long)\n",
     "    \n",
     "dataset = DDI_GraphDataset(graph_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8b2162e2-ef44-4b52-b6bc-c5c566de5891",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Data(x=[28, 4], edge_index=[2, 62]),\n",
-       " Data(x=[39, 4], edge_index=[2, 72]),\n",
-       " tensor(0))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset[0]"
    ]
   },
   {
@@ -416,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1c9e1e99-b5f6-490b-83de-0da19b437f78",
    "metadata": {},
    "outputs": [],
@@ -434,7 +400,7 @@
     "random_state = 42\n",
     ")\n",
     "\n",
-    "# train test datasets\n",
+    "# train and test datasets\n",
     "train_dataset = Subset(dataset, train_indices)\n",
     "test_dataset = Subset(dataset, test_indices)\n",
     "\n",
@@ -539,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "dc925c38-dbcf-4689-8123-11022c7fe72e",
    "metadata": {},
    "outputs": [
@@ -591,17 +557,17 @@
     "    predicted_labels = []\n",
     "    \n",
     "    for graph_X1_batch, graph_X2_batch, labels in test_loader:\n",
-    "        # Forward pass \n",
+    "        # forward pass \n",
     "        z1 = gnn(graph_X1_batch)\n",
     "        z2 = gnn(graph_X2_batch)\n",
     "\n",
-    "        # Combine the graph embeddings\n",
+    "        # combine the graph embeddings\n",
     "        z_combined = torch.cat([z1, z2, torch.abs(z1 - z2), z1 * z2], dim=1)\n",
     "\n",
-    "        # Forward pass through the classifier\n",
+    "        # forward pass through the classifier\n",
     "        output = classifier(z_combined)\n",
     "\n",
-    "        # Calculate loss and backpropagate\n",
+    "        # calculate loss and backpropagate\n",
     "        loss = criterion(output, labels)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
